--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -1843,6 +1843,12 @@
                     </Event.Actions>
                 </Event>
                 
+                <Event Name = "CloseMakeCamp">
+                    <Event.Actions>
+                        <RemoveState/>
+                    </Event.Actions>
+                </Event>
+                
                 <Event Name = "OpenMessageBox">
                     <Event.Actions>
                         <AddSubstate Name="MessageBox"/>
