--- a/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
@@ -10,6 +10,11 @@
     <ls:UIWidget.Resources>
         <ControlTemplate x:Key="PanelButtonWT" TargetType="ls:LSButton">
             <ControlTemplate.Resources>
+                <BitmapImage x:Key="btnNormal" UriSource="pack://application:,,,/GustavNoesisGUI;component/Assets/Buttons/btn_hudNav_d.png"/>
+                <BitmapImage x:Key="btnHover" UriSource="pack://application:,,,/GustavNoesisGUI;component/Assets/Buttons/btn_hudNav_h.png" />
+                <BitmapImage x:Key="btnPressed" UriSource="pack://application:,,,/GustavNoesisGUI;component/Assets/Buttons/btn_hudNav_p.png" />
+                <BitmapImage x:Key="btnDisabled" UriSource="pack://application:,,,/GustavNoesisGUI;component/Assets/Buttons/btn_hudNav_disabled.png" />
+
                 <System:String x:Key="DefaultCommandParam">None</System:String>
             </ControlTemplate.Resources>
 
