picture-mode: Added picture mode to dialogue screens.

--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -1277,6 +1277,13 @@
                 <StateWidget Filename="Overlay.xaml" Layer="Notifications"/>
             </State.Widgets>
             <State.Events>
+                <!-- MOD START - Adds UI Toggle -->
+                <Event Name="OpenPictureMode">
+                    <Event.Actions>
+                        <PushState Name="PictureMode"/>
+                    </Event.Actions>
+                </Event>
+                <!-- MOD END -->
                 <Event Name="GE.OnDialogueShow"/>
                 <Event Name="OpenTrade">
                     <Event.Actions>
