--- a/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
@@ -36,7 +36,7 @@
     </ls:UIWidget.Resources>
     
     <Grid HorizontalAlignment="Right" VerticalAlignment="Bottom">
-      <ls:LSButton  CommandParameter="OpenPictureMode" Template="{StaticResource PanelButtonWT}" ToolTipService.ShowOnDisabled="true" 
+      <ls:LSButton  CommandParameter="OpenPictureMode" Template="{StaticResource PanelButtonWT}"
                     Command="{Binding Path=DataContext.CustomEvent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"
                     SoundID="PictureModeSnap" x:Name="PictureModeBtn">
         <ls:LSButton.Resources>
