main: Updated text.

--- a/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
@@ -201,7 +201,7 @@
                     Command="{Binding Path=DataContext.CustomEvent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"
                     CommandParameter="OpenPictureMode">
                     <ls:LSButton.ToolTip>
-                        <ls:LSTooltip Content="Activate Picture Mode"/>
+                        <ls:LSTooltip Content="Activate Photomode"/>
                     </ls:LSButton.ToolTip>
                 </ls:LSButton>
                 <!-- MOD END -->
