--- a/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/PictureMode.xaml
@@ -22,7 +22,7 @@
                 <Image x:Name="BtnBg" Source="{StaticResource btnNormal}" Stretch="None"/>
                 <Image x:Name="icon" Source="{DynamicResource Icon_Normal}" Stretch="None"/>
                 <Grid.ToolTip>
-                    <ls:LSTooltip Content="Activate Picture Mode"/>
+                    <ls:LSTooltip Content="Activate Photomode"/>
                 </Grid.ToolTip>
             </Grid>
 
