Re-added Picture mode in-game

--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -563,7 +563,7 @@
                 <ls:StateWidget Filename="PassiveRoll.xaml" Layer="PopupPanels"/>
                 <ls:StateWidget Filename="VoiceChat.xaml" Layer="PopupPanels"/>
                 <!-- MOD START - Adds UI Toggle -->
-                <StateWidget Filename="PictureMode.xaml" Layer="HUD"/>
+                <ls:StateWidget Filename="PictureMode.xaml" Layer="HUD"/>
                 <!-- MOD END-->
             </ls:State.Widgets>
 
