--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -5,8 +5,6 @@
     <ls:StateMachine.States>
 
         <!--STATE: Root-->
-
-
         <ls:State Name = "Root" Layout = "Common" Owner = "All">
             <ls:State.InitialSubstates>
                 <ls:InitialSubstate Name="SystemRoot"/>
@@ -68,7 +66,13 @@
                         <ls:RemoveAllSubstates/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
-            </ls:State.Events>
+
+                    <ls:StateEvent Name = "OpenLocaDebug">
+                        <ls:StateEvent.Actions>
+                            <ls:PushState Name="LocaDebug"/>
+                        </ls:StateEvent.Actions>
+                    </ls:StateEvent>
+                </ls:State.Events>
         </ls:State>
 
         <!--STATE: SplashScreen-->
@@ -180,7 +184,7 @@
             </ls:State.Widgets>
 
             <ls:State.Events>
-            	<!-- MOD START - Adds UI Toggle -->
+				<!-- MOD START - Adds UI Toggle -->
                 <ls:StateEvent Name="OpenPictureMode">
                     <ls:StateEvent.Actions>
                         <ls:PushState Name="PictureMode"/>
@@ -221,7 +225,7 @@
                 <ls:StateWidget Filename="Notification.xaml" Layer="Notifications"/>
                 <ls:StateWidget Filename="CharacterLevelUp.xaml" Layer="Pause"/>
                 <ls:StateWidget Filename="Overlay.xaml" Layer="MessageBox"/>
-                <!-- MOD START - Adds UI Toggle -->
+				<!-- MOD START - Adds UI Toggle -->
                 <ls:StateWidget Filename="PictureMode.xaml" Layer="HUDTop"/>
                 <!-- MOD END-->
             </ls:State.Widgets>
@@ -234,7 +238,7 @@
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <!-- MOD END -->
-                <ls:StateEvent Name = "CloseWidget">
+				<ls:StateEvent Name = "CloseWidget">
                     <ls:StateEvent.Actions>
                         <ls:RemoveState/>
                     </ls:StateEvent.Actions>
@@ -317,7 +321,8 @@
                 </ls:StateEvent>
             </ls:State.Events>
         </ls:State>
-        <!-- MOD START - Adds UI Toggle -->
+		
+		<!-- MOD START - Adds UI Toggle -->
         <!--STATE: Picture Mode -->
         <ls:State DisableStatesBelow="True" HideStatesBelow="True" Layout="Common" Name="PictureMode" Owner="All">
             <ls:State.Events>
@@ -344,22 +349,7 @@
             </ls:State.Widgets>
 
             <ls:State.Events>
-                <ls:StateEvent Name = "ToggleGameMenu">
-                    <ls:StateEvent.Actions>
-                        <ls:RemoveState/>
-                    </ls:StateEvent.Actions>
-                </ls:StateEvent>
-                <ls:StateEvent Name = "IE.ToggleInGameMenu">
-                    <ls:StateEvent.Actions>
-                        <ls:RemoveState/>
-                    </ls:StateEvent.Actions>
-                </ls:StateEvent>
                 <ls:StateEvent Name = "CloseGameMenu">
-                    <ls:StateEvent.Actions>
-                        <ls:RemoveState/>
-                    </ls:StateEvent.Actions>
-                </ls:StateEvent>
-                <ls:StateEvent Name = "IE.UICancel">
                     <ls:StateEvent.Actions>
                         <ls:RemoveState/>
                     </ls:StateEvent.Actions>
@@ -397,6 +387,13 @@
                 <ls:StateEvent Name = "ConnectivityMenuOpen">
                     <ls:StateEvent.Actions>
                         <ls:PushState Name="ConnectivityMenu"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+				<ls:StateEvent Name = "GE.OnDialogueShow">
+                    <ls:StateEvent.Actions>
+						<ls:RemoveState/>
+                        <ls:PushState Name="Dialogue"/>
+						<ls:PushState Name="Paused"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
             </ls:State.Events>
@@ -473,7 +470,7 @@
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <!-- MOD END -->
-                <ls:StateEvent Name = "ToggleGameMenu">
+				<ls:StateEvent Name = "ToggleGameMenu">
                     <ls:StateEvent.Actions>
                         <ls:PushState Name="Paused"/>
                     </ls:StateEvent.Actions>
@@ -486,6 +483,16 @@
                 <ls:StateEvent Name = "GE.OnDialogueShow">
                     <ls:StateEvent.Actions>
                         <ls:PushState Name="Dialogue"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "PreloadDialogue">
+                    <ls:StateEvent.Actions>
+                        <ls:PreloadState Name="Dialogue"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "ClearPreloadDialogue">
+                    <ls:StateEvent.Actions>
+                        <ls:ClearPreloadState Name="Dialogue"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <ls:StateEvent Name = "OpenContainerInventory">
@@ -551,7 +558,6 @@
                 <ls:StateWidget Filename="OverheadInfo.xaml" Layer="HUD" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="WorldTooltips.xaml" Layer="HUD"/>
                 <ls:StateWidget Filename="HotBar.xaml" Layer="HUDTop"/>
-                <ls:StateWidget Filename="CharacterResources.xaml" Layer="PopupPanels"/>
                 <ls:StateWidget Filename="Minimap.xaml" Layer="HUD"/>
                 <ls:StateWidget Filename="TargetInfo.xaml" Layer="HUD" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="PlayerPortraits.xaml" Layer="PopupPanels"/>
@@ -562,7 +568,7 @@
                 <ls:StateWidget Filename="DragAndDropPreview.xaml" Layer="DragAndDrop" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="PassiveRoll.xaml" Layer="PopupPanels"/>
                 <ls:StateWidget Filename="VoiceChat.xaml" Layer="PopupPanels"/>
-                <!-- MOD START - Adds UI Toggle -->
+				<!-- MOD START - Adds UI Toggle -->
                 <ls:StateWidget Filename="PictureMode.xaml" Layer="HUD"/>
                 <!-- MOD END-->
             </ls:State.Widgets>
@@ -613,7 +619,7 @@
 
         </ls:State>
 
-        <!-- STATE: ExtractedPanels -->
+        <!-- STATE: ExtractedPanels - TO REMOVE -->
         <ls:State Name = "ExtractedPanels" Layout = "Player" Owner = "Player">
             <ls:State.Events>
                 <ls:StateEvent Name = "ExtractEquipment">
@@ -639,7 +645,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: Extracted Equipment -->
+        <!--STATE: Extracted Equipment - TO REMOVE -->
         <ls:State Name = "ExtractedEquipment" DisableStatesBelow = "False" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="ExtractedPanel.xaml" Layer="HUD"/>
@@ -653,7 +659,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: Extracted Inventory -->
+        <!--STATE: Extracted Inventory - TO REMOVE -->
         <ls:State Name = "ExtractedInventory" DisableStatesBelow = "False" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="ExtractedPanel.xaml" Layer="HUD"/>
@@ -667,7 +673,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: Extracted Character Sheet -->
+        <!--STATE: Extracted Character Sheet - TO REMOVE -->
         <ls:State Name = "ExtractedCharacterSheet" DisableStatesBelow = "False" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="ExtractedPanel.xaml" Layer="HUD"/>
@@ -681,7 +687,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: Extracted Spell Book -->
+        <!--STATE: Extracted Spell Book - TO REMOVE -->
         <ls:State Name = "ExtractedSpellBook" DisableStatesBelow = "False" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="ExtractedPanel.xaml" Layer="HUD"/>
@@ -695,7 +701,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: PlayerPanels-->
+		<!--STATE: PlayerPanels - TO EDIT -->
         <ls:State Name = "PlayerPanels" Layout = "Player" Owner = "Player">
             <ls:State.Events>
                 <ls:StateEvent Name = "CloseAll">
@@ -780,7 +786,7 @@
                 </ls:StateEvent>
                 <ls:StateEvent Name = "ToggleSpells">
                     <ls:StateEvent.Actions>
-                        <ls:SetSubstate Name="SpellBook"/>
+                        <ls:SetSubstate Name="CharacterPanel" Metadata="ToggleSpells"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <ls:StateEvent Name = "SplitItemToggle">
@@ -798,11 +804,20 @@
                         <ls:PushState Name="ConditionsPanel"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+                <ls:StateEvent Name="ToggleCharacterPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:SetSubstate Name="CharacterPanel"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name="TogglePartyPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:SetSubstate Name="PartyPanel"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
             </ls:State.Events>
         </ls:State>
 
-
-        <!--STATE: PartyEquipment-->
+        <!--STATE: PartyEquipment - TO REMOVE (Inventory) -->
         <ls:State Name = "PartyEquipment" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="PartyEquipment.xaml" Layer="Panels"/>
@@ -837,7 +852,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: PartyCharacterSheet-->
+        <!--STATE: PartyCharacterSheet - TO REPLACE -->
         <ls:State Name = "PartyCharacterSheet" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="PartyCharacterSheet.xaml" Layer="Panels"/>
@@ -872,7 +887,7 @@
             </ls:State.Events>
         </ls:State>
 
-        <!--STATE: CharacterOverview-->
+        <!--STATE: CharacterOverview - TO REMOVE-->
         <ls:State Name = "CharacterOverview" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="CharacterOverview.xaml" Layer="Panels"/>
@@ -903,7 +918,7 @@
         </ls:State>
 
 
-        <!--STATE: Inventory-->
+        <!--STATE: Inventory - TO REPLACE -->
         <ls:State Name = "PartyInventory" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="PartyInventory.xaml" Layer="Panels"/>
@@ -960,6 +975,77 @@
                         <ls:RemoveState/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+            </ls:State.Events>
+        </ls:State>
+
+        <!--STATE: Character panel-->
+        <ls:State Name="CharacterPanel" Layout="Player" Owner="Player" HideStatesBelow="False" IsModal="False">
+            <ls:State.Widgets>
+                <ls:StateWidget Filename="CharacterPanel.xaml" Layer="PopupPanels"/>
+            </ls:State.Widgets>
+
+            <ls:State.Events>
+                <ls:StateEvent Name = "CloseWidget">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+
+                <ls:StateEvent Name="ToggleCharacterPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+
+                <ls:StateEvent Name = "CloseCharacterPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+            </ls:State.Events>
+        </ls:State>
+
+        <!--STATE: Party panels-->
+        <ls:State Name="PartyPanel" Layout="Player" Owner="Player" IsModal="True">
+            <ls:State.Widgets>
+                <ls:StateWidget Filename="PartyPanel.xaml" Layer="Panels"/>
+                <ls:StateWidget Filename="Overlay.xaml" Layer="Notifications"/>
+            </ls:State.Widgets>
+
+            <ls:State.Events>
+                <ls:StateEvent Name = "CloseWidget">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+
+                <ls:StateEvent Name = "TogglePartyPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+
+                <ls:StateEvent Name = "ClosePartyPanel">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+
+				<ls:StateEvent Name = "IE.ToggleMap">
+					<ls:StateEvent.Actions>
+                        <ls:SetSubstate Name="JournalMap"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
+				<ls:StateEvent Name = "IE.ToggleJournal">
+					<ls:StateEvent.Actions>
+						<ls:SetSubstate Name="JournalQuests"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
+				<ls:StateEvent Name = "IE.ToggleInspiration">
+					<ls:StateEvent.Actions>
+						<ls:SetSubstate Name="JournalInspiration"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
             </ls:State.Events>
         </ls:State>
 
@@ -1147,7 +1233,6 @@
         <ls:State Name = "Trade" HideStatesBelow = "True" DisableStatesBelow = "True" Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
                 <ls:StateWidget Filename="Trade.xaml" Layer="Panels"/>
-                <ls:StateWidget Filename="PlayerPortraits.xaml" Layer="PopupPanels"/>
                 <ls:StateWidget Filename="DragAndDropPreview.xaml" Layer="DragAndDrop" IgnoreHitTest="True"/>
                 <ls:StateWidget Filename="Overlay.xaml" Layer="MessageBox"/>
             </ls:State.Widgets>
@@ -1375,8 +1460,12 @@
         <!--STATE: Dialogue-->
         <ls:State Name = "Dialogue" DisableStatesBelow = "True" HideStatesBelow="True"  Layout = "Player" Owner = "Player">
             <ls:State.Widgets>
-                <ls:StateWidget Filename="Dialogue.xaml" Layer="HUD" BlockedLoading="True"/>
-                <ls:StateWidget Filename="Overlay.xaml" Layer="Notifications" BlockedLoading="True"/>
+                <ls:StateWidget Filename="Dialogue.xaml" Layer="HUD" >
+                    <ls:StateWidget.Libraries>
+                        <ls:StateLibrary Filename="Library/DialogueTemplates.xaml"/>
+                    </ls:StateWidget.Libraries>
+                </ls:StateWidget>
+                <ls:StateWidget Filename="Overlay.xaml" Layer="Notifications"/>
             </ls:State.Widgets>
             <ls:State.Events>
                 <!-- MOD START - Adds UI Toggle -->
@@ -1386,13 +1475,18 @@
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <!-- MOD END -->
-                <ls:StateEvent Name = "GE.OnDialogueShow" />
+				<ls:StateEvent Name = "GE.OnDialogueShow" />
                 <ls:StateEvent Name = "OpenTrade">
                     <ls:StateEvent.Actions>
                         <ls:PushState Name="Trade"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
                 <ls:StateEvent Name = "GE.OnDialogueHide">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "DialogueHide">
                     <ls:StateEvent.Actions>
                         <ls:RemoveState/>
                     </ls:StateEvent.Actions>
@@ -1840,6 +1934,11 @@
                         <ls:AddSubstate Name="Tutorial"/>
                     </ls:StateEvent.Actions>
                 </ls:StateEvent>
+                <ls:StateEvent Name = "OpenSelectionFlyOut">
+                    <ls:StateEvent.Actions>
+                        <ls:AddSubstate Name="SelectionFlyOut"/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
             </ls:State.Events>
         </ls:State>
 
@@ -2040,6 +2139,25 @@
 
             <ls:State.Events>
                 <ls:StateEvent Name = "HideLongRest">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+            </ls:State.Events>
+        </ls:State>
+
+        <ls:State Name = "LocaDebug" Layout = "Common" Owner = "DefaultPlayer" DisableStatesBelow = "True" IsModal="True">
+            <ls:State.Widgets>
+                <ls:StateWidget Filename="DebugViewWidget.xaml" Layer="MessageBox"/>
+            </ls:State.Widgets>
+
+            <ls:State.Events>
+                <ls:StateEvent Name = "HideLocaDebug">
+                    <ls:StateEvent.Actions>
+                        <ls:RemoveState/>
+                    </ls:StateEvent.Actions>
+                </ls:StateEvent>
+                <ls:StateEvent Name = "OpenLocaDebug">
                     <ls:StateEvent.Actions>
                         <ls:RemoveState/>
                     </ls:StateEvent.Actions>
