--- a/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:ls="clr-namespace:ls;assembly=SharedGUI"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:noesis="clr-namespace:NoesisGUIExtensions;assembly=Noesis.GUI.Extensions"
@@ -15,7 +15,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Library/DialogueTemplates.xaml"/>
-                <!-- MOD START -->
+				<!-- MOD START -->
                 <ResourceDictionary Source="../Library/ImprovedUITemplates.xaml"/>
                 <!-- MOD END -->
             </ResourceDictionary.MergedDictionaries>
@@ -38,7 +38,7 @@
 
             <Style x:Key="Dialogue.ContinueBinding" TargetType="ls:LSInputBinding">
                 <Setter Property="PlayerId" Value="{Binding DataContext.CurrentPlayer.PlayerId, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" />
-                <Setter Property="Command" Value="{Binding SelectorEnterCommand.ActionCommand}" />
+                <Setter Property="Command" Value="{Binding SelectorSkipCommand.ActionCommand}" />
                 <Setter Property="CommandParameter" Value="{Binding DataContext.CurrentPlayer.PlayerId, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" />
 				<Setter Property="SoundID" Value="UI_Input_Dialogue_Continue"/>
             </Style>
@@ -56,7 +56,7 @@
         </ResourceDictionary>
     </ls:UIWidget.Resources>
 
-    <Grid DataContext="{Binding CurrentPlayer.SelectedCharacter.ActiveDialogue}" d:DataContext="{d:DesignInstance {x:Type ls:Dialogue}, IsDesignTimeCreatable=False}">
+    <Grid DataContext="{Binding CurrentPlayer.SelectedCharacter.ActiveDialogue}">
         <ContentControl Template="{DynamicResource PollNotification}" VerticalAlignment="Top" HorizontalAlignment="Center">
             <ContentControl.Style>
                 <Style TargetType="ContentControl" BasedOn="{StaticResource {x:Type ContentControl}}">
@@ -76,7 +76,7 @@
 
         <ls:LSInputBinding PlayerId="{Binding DataContext.CurrentPlayer.PlayerId, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" BoundEvent="UIUp" Command="{Binding SelectorUpCommand.ActionCommand}" />
         <ls:LSInputBinding PlayerId="{Binding DataContext.CurrentPlayer.PlayerId, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" BoundEvent="UIDown" Command="{Binding SelectorDownCommand.ActionCommand}" />
-        <ls:LSInputBinding BoundEvent="UIEndTurn" Style="{StaticResource Dialogue.ContinueBinding}" />
+        <ls:LSInputBinding BoundEvent="UISkipDialog" Style="{StaticResource Dialogue.ContinueBinding}" />
 
         <!-- this is an alternative to allow pressing "1" to on continue nodes -->
         <ls:LSInputBinding BoundEvent="UISelectSlot1" Style="{StaticResource Dialogue.ContinueBinding}" IsEnabled="{Binding ShowAnswers, Converter={StaticResource InvertBoolConverter}, Mode=OneWay}" />
@@ -168,14 +168,14 @@
             </ContentControl>
             <!--#endregion-->
             <StackPanel Orientation="Horizontal">
-                <ls:LSButton x:Name="btnMenu" Style="{StaticResource GameMenuButtonStyle}" Command="{Binding DataContext.CustomEvent, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" CommandParameter="ToggleGameMenu" Content="{Binding ShortShortcut}" SoundID="UI_HUD_EscapeMenu_Open"
+                <ls:LSButton x:Name="btnMenu" Style="{StaticResource GameMenuButtonStyle}" Command="{Binding DataContext.CustomEvent, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" CommandParameter="ToggleGameMenu" Content="{Binding Shortcut}" SoundID="UI_HUD_EscapeMenu_Open"
                                 DataContext="{Binding DataContext.CurrentPlayer.UIData.InputEvents, Converter={StaticResource FindInputEventConverter}, ConverterParameter='Menu', RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}" ToolTipService.Placement="Center" ToolTipService.VerticalOffset="-88">
                     <ls:LSButton.ToolTip>
                         <ls:LSTooltip Content="{Binding Source='hb9a8dd57g134fg425fg9da0g1dc579af0c60',Converter={StaticResource TranslatedStringConverter}, ConverterParameter='Loca'}"/>
                     </ls:LSButton.ToolTip>
                 </ls:LSButton>
 
-                <ls:LSToggleButton x:Name="btnToggleCharacters" ToolTipService.Placement="Center" ToolTipService.VerticalOffset="-88" HorizontalAlignment="Left" Style="{StaticResource Dialogue.ExpandCharactersButtonStyle}" Visibility="{Binding CurrentPlayer.AssignedCharacters.Count, Converter={StaticResource CountToVisibleConverter}, ConverterParameter={StaticResource ShowCharacterSelectionCount}}" SoundID="UI_HUD_Dialogue_ExpandCharacters">
+                <ls:LSToggleButton x:Name="btnToggleCharacters" ToolTipService.Placement="Center" ToolTipService.VerticalOffset="-88" HorizontalAlignment="Left" Style="{StaticResource Dialogue.ExpandCharactersButtonStyle}" Visibility="{Binding CurrentPlayer.AssignedCharacters.Count, Converter={StaticResource CountToVisibilityConverter}, ConverterParameter={StaticResource ShowCharacterSelectionCount}}" SoundID="UI_HUD_Dialogue_ExpandCharacters">
                     <ls:LSToggleButton.ToolTip>
                         <ls:LSTooltip Content="{Binding Source='h455c1b64g1c6dg4ac4ga9aegb3f0d761858a',Converter={StaticResource TranslatedStringConverter}}"/>
                     </ls:LSToggleButton.ToolTip>
@@ -196,7 +196,7 @@
                         <ls:LSTooltip Content="{Binding Source='he9e4a39fg8a5dg4ac5gacffgaea214260c69',Converter={StaticResource TranslatedStringConverter}}"/>
                     </ls:LSButton.ToolTip>
                 </ls:LSButton>
-                <!-- MOD START - Adds picture button -->
+				<!-- MOD START - Adds picture button -->
                 <ls:LSButton x:Name="PictureModeBtn" ToolTipService.Placement="Center" ToolTipService.VerticalOffset="-88" Style="{StaticResource PictureModeButtonStyle}"
                     Command="{Binding Path=DataContext.CustomEvent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"
                     CommandParameter="OpenPictureMode">
@@ -209,12 +209,21 @@
         </StackPanel>
 
         <!-- MOD START - Remove early access text from dialogues
-        <TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
+		<TextBlock VerticalAlignment="Top" HorizontalAlignment="Right" FontSize="{StaticResource GiganticFontSize}"  Opacity="0.7">
             <Run Text="{Binding Source='h8be1f0ddgdfa7g4812ga2b5g04854b2a1a65', Converter={StaticResource TranslatedStringConverter}, ConverterParameter='ToUpper'}"/>
             <Run Text=" - "/>
             <Run Text="{Binding DataContext.Data.VersionString, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}"/>
         </TextBlock>
-            MOD END -->
-            
+		MOD END -->
+
     </Grid>
+    <b:Interaction.Triggers>
+        <b:DataTrigger Binding="{Binding CurrentPlayer.SelectedCharacter.ActiveDialogue}" Value="{x:Null}">
+            <b:InvokeCommandAction Command="{Binding Path=DataContext.CustomEvent, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ls:UIWidget}}}" CommandParameter="DialogueHide"/>
+        </b:DataTrigger>
+
+        <b:EventTrigger EventName="WidgetClosing">
+            <b:InvokeCommandAction Command="{Binding DataContext.RecheckReward, RelativeSource={RelativeSource AncestorType={x:Type ls:UIWidget}}}"/>
+        </b:EventTrigger>
+    </b:Interaction.Triggers>
 </ls:UIWidget>
