--- a/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
@@ -864,7 +864,7 @@
 							
 							<!-- MOD START - God available for all classes by moving -->
                             
-                            <StackPanel Visibility="{Binding Gods.ComboItems.Count, Converter={StaticResource CountToVisibleConverter}}">
+                            <StackPanel Visibility="{Binding Gods.ComboItems.Count, Converter={StaticResource CountToVisibilityConverter}}">
                                 <TextBlock Text="{Binding Source='hd146e00aga3a6g4e42g8068g9271c358dc5b', Converter={StaticResource TranslatedStringConverter}}" Style="{StaticResource PanelHeaderText}"/>
                                 <ContentControl Template="{StaticResource ValidationFailedHighlighter}" Tag="{Binding GodInvalid}" Margin="0,20,0,0">
                                     <Control Template="{DynamicResource Carousel}" DataContext="{Binding Gods}">
@@ -896,7 +896,7 @@
                             <TextBlock Text="{Binding DummyCharacter.Stats.ClassList[0].SubclassDescription}" Style="{StaticResource PanelInfoText}" Margin="0,20,0,0"/>
 
                             <!-- MOD START - Original God Position -->
-                            <!--<StackPanel Visibility="{Binding Gods.ComboItems.Count, Converter={StaticResource CountToVisibleConverter}}">
+                            <!--<StackPanel Visibility="{Binding Gods.ComboItems.Count, Converter={StaticResource CountToVisibilityConverter}}">
                                 <TextBlock Text="{Binding Source='hd146e00aga3a6g4e42g8068g9271c358dc5b', Converter={StaticResource TranslatedStringConverter}}" Style="{StaticResource PanelHeaderText}"/>
                                 <ContentControl Template="{StaticResource ValidationFailedHighlighter}" Tag="{Binding GodInvalid}" Margin="0,20,0,0">
                                     <Control Template="{DynamicResource Carousel}" DataContext="{Binding Gods}">
