--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -226,7 +226,7 @@
                 <ls:StateWidget Filename="CharacterLevelUp.xaml" Layer="Pause"/>
                 <ls:StateWidget Filename="Overlay.xaml" Layer="MessageBox"/>
 				<!-- MOD START - Adds UI Toggle -->
-                <ls:StateWidget Filename="PictureMode.xaml" Layer="HUDTop"/>
+                <ls:StateWidget Filename="PictureMode.xaml" Layer="Pause"/>
                 <!-- MOD END-->
             </ls:State.Widgets>
 
