--- a/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/Dialogue.xaml
@@ -8,7 +8,7 @@
              xmlns:noesis="clr-namespace:NoesisGUIExtensions;assembly=Noesis.GUI.Extensions"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d"
-             ls:UIWidget.ContextName="Dialogue" d:DataContext="{d:DesignInstance {x:Type ls:Dialogue}, IsDesignTimeCreatable=True}"
+             ls:UIWidget.ContextName="Dialogue" d:DataContext="{d:DesignInstance {x:Type ls:DCDialogue}, IsDesignTimeCreatable=True}"
              d:DesignHeight="2160" d:DesignWidth="3840">
 
     <ls:UIWidget.Resources>
